--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hello GIT</title>
 </head>
 <body>
-    <h1>Welcome to MY WebSite!!</h1>
+    <h1 style="color: blue;">Welcome to MY WebSite!</h1>
     <h2>H2 is Here!</h2>
     Hello,GIT!
 </body>
